moved html2pdf to the ./js folder

--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@
         <div class="preview" style="resize: horizontal;overflow: auto;width:50%" id="preview"></div>
     </div>
     <input type="color" id="context-menu-color-picker" class="context-menu-item" style="display:none;z-index:2" oninput="addTextTypeInTextArea(contextMenuColorpicker.value.split('#')[1], 'select')">
-    <script src="js/emojis.js"></script>
-    <script src="js/math.js"></script>
+    <script src="./js/emojis.js"></script>
+    <script src="./js/math.js"></script>
     <script src="./js/ConvertToMarkdown.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/DOMElements.js"></script>
     <script src="./js/utility.js"></script>
-    <script src="html2pdf.js"></script>
+    <script src="./js/html2pdf.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
         let TextEditorColorInversion = document.getElementById("text-editor-color-inversion").checked;
