moved emojis.js and Emojis.html to ./Emojis

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <span class="divider" dashed></span>
                 <span style="text-decoration: underline dotted;cursor:help" title="Alt Click the preview">Fullscreen Preview</span>
                 <span class="divider"></span>   
-                <a href="./Emojis.html"><button class="editing-button" style="cursor:help">Emoji List</button></a>
+                <a href="./Emojis/Emojis.html"><button class="editing-button" style="cursor:help">Emoji List</button></a>
             </fieldset>
         </div>
         <div id="file" class="bar-section">
