--- a/Emojis/Emojis.html
+++ b/Emojis/Emojis.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <script src="js/emojis.js"></script>
+    <script src="./emojis.js"></script>
     <meta charset="utf-8">
     <style>
         h1{
