moved emojis to js, renamed Emojis.html to index.html

--- a/Emojis/index.html
+++ b/Emojis/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <script src="./emojis.js"></script>
+    <script src="../js/emojis.js"></script>
     <meta charset="utf-8">
     <style>
         h1{
