--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     </div>
     <input type="color" id="context-menu-color-picker" class="context-menu-item" style="display:none;z-index:2" oninput="addTextTypeInTextArea(contextMenuColorpicker.value.split('#')[1], 'select')">
     <script src="./js/emojis.js"></script>
-    <script src="./js/math.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjs@7.5.1/dist/math.min.js"></script>
     <script src="./js/ConvertToMarkdown.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/DOMElements.js"></script>
