full screen buttons, moved edit + preview modes into functions

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         </div>
         <div id="help" class="bar-section">
             <fieldset>
-                <span style="text-decoration: underline dotted;cursor:help" title="Ctrl + Shift + E">Open/close this</span>
+                <span style="cursor:help" title="Ctrl + Shift + E">Open/close this</span>
                 <span class="divider" dashed></span>
-                <span style="text-decoration: underline dotted;cursor:help" title="Alt Click the preview">Fullscreen Preview</span>
+                <button style="cursor:help" title="Alt Click the preview" class="editing-button" onclick="setPreviewMode()">Fullscreen Preview</button>
+                <button style="cursor:help" title="Alt Click the editor" class="editing-button" onclick="setEditMode()">Editing Mode</button>
                 <span class="divider"></span>   
                 <a href="./Emojis/Emojis.html"><button class="editing-button" style="cursor:help">Emoji List</button></a>
             </fieldset>
