update log, removed |* |>

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                 <button style="cursor:help" title="Alt Click the editor" class="editing-button" onclick="setEditMode()">Editing Mode</button>
                 <span class="divider"></span>   
                 <a href="./Emojis/Emojis.html"><button class="editing-button" style="cursor:help">Emoji List</button></a>
+                <span class="divider"></span>
+                <a href="./Update.html"><button class="editing-button" style="cursor: pointer;" title="V 1.0.0">Updates</button></a>
             </fieldset>
         </div>
         <div id="file" class="bar-section">
