--- a/Update.html
+++ b/Update.html
@@ -29,6 +29,10 @@
             text-decoration: underline;
             color:red;
         }
+        .fixed{
+            text-decoration: underline red;
+            color: #2e882b;
+        }
 
         ul{
             text-align: center;
@@ -51,6 +55,10 @@
                 <li>|*</li>
                 <li>|></li>
             </ul>
+        </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>>PRO + >CON didn't close the style attribute</li>
         </ul>
     </div>
 </body>
