--- a/Update.html
+++ b/Update.html
@@ -47,6 +47,7 @@
         <h3 class="added">Additions</h3>
         <ul>
             <li>Added Update Log</li>
+            <li>Added .[class]"text" as alternative to {."class"text}</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
