--- a/Update.html
+++ b/Update.html
@@ -18,7 +18,6 @@
             border-bottom:1px dashed black;
         }
         .version-container{
-            text-align:center;
             font-size:1.5em;
         }
         .added{
@@ -33,10 +32,6 @@
             text-decoration: underline red;
             color: #2e882b;
         }
-
-        ul{
-            text-align: center;
-        }
     </style>
 </head>
 <body>
@@ -48,6 +43,18 @@
         <ul>
             <li>Added Update Log</li>
             <li>Added .[class]"text" as alternative to {."class"text}</li>
+            <li>Indentation Left, Right, and Center align have an optional margin option now</li>
+            <ul>
+                <li>|(margin)> left&lt;-|</li>
+                <li>|->right &lt;(margin)|</li>
+                <li>|(margin)->text&lt;-(margin)|</li>
+            </ul>
+            <li>Margin left, right, and center have better versions</li>
+            <ul>
+                <li>margin-->text</li>
+                <li>text&lt;--margin</li>
+                <li>margin-->text&lt;--margin</li>
+            </ul>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
@@ -55,6 +62,12 @@
             <ul>
                 <li>|*</li>
                 <li>|></li>
+            </ul>
+            <li>Old version of Margin</li>
+            <ul>
+                <li>{->margin text}</li>
+                <li>{text &lt;-margin}</li>
+                <li>{margin->text&lt;-margin}</li>
             </ul>
         </ul>
         <h3 class="fixed">Fixes</h3>
