unicode copy works on chrome

--- a/Update.html
+++ b/Update.html
@@ -73,6 +73,7 @@
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>>PRO + >CON didn't close the style attribute</li>
+            <li>Unicode copy works on chrome</li>
         </ul>
     </div>
 </body>
