Help menu/link to README.md

--- a/Update.html
+++ b/Update.html
@@ -55,6 +55,7 @@
                 <li>text&lt;--margin</li>
                 <li>margin-->text&lt;--margin</li>
             </ul>
+            <li>Link to README.md<li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
