--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                 <a href="./Emojis/Emojis.html"><button class="editing-button" style="cursor:help">Emoji List</button></a>
                 <span class="divider"></span>
                 <a href="./Update.html"><button class="editing-button" style="cursor: pointer;" title="V 1.0.0">Updates</button></a>
+                <span class="divider"></span>
+                <a href="./README.md"><button class="editing-button" style="cursor: pointer;" title="help">Help</button></a>
             </fieldset>
         </div>
         <div id="file" class="bar-section">
