space for margin in text-align is optional

--- a/Update.html
+++ b/Update.html
@@ -32,6 +32,10 @@
             text-decoration: underline red;
             color: #2e882b;
         }
+        .changed{
+            text-decoration: underline;
+            color:rgb(207, 207, 87);
+        }
     </style>
 </head>
 <body>
@@ -75,6 +79,13 @@
         <ul>
             <li>>PRO + >CON didn't close the style attribute</li>
             <li>Unicode copy works on chrome</li>
+        </ul>
+    </div>
+    <div id="#1.0.1" class="version-container">
+        <h2 class="version-num">1.0.1</h2>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li></li>
         </ul>
     </div>
 </body>
