|line-height text|

--- a/Update.html
+++ b/Update.html
@@ -41,6 +41,14 @@
 <body>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div id="#1.1.0" class="version-container">
+        <h2 class="version-num">1.1.0</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
+    <br><hr>
     <div id="#1.0.1" class="version-container">
         <h2 class="version-num">1.0.1</h2>
         <h3 class="changed">Changes</h3>
@@ -48,8 +56,7 @@
             <li>|(margin> )text&lt;-|<br>Was changed to<br>|(margin>)text&lt;-|<br>same with center and right align</li>
         </ul>
     </div>
-    <br>
-    <hr>
+    <br><hr>
     <div id="1.0.0" class="version-container">
         <h2 class="version-num">1.0.0</h2>
         <h3 class="added">Additions</h3>
