--- a/Update.html
+++ b/Update.html
@@ -45,7 +45,14 @@
         <h2 class="version-num">1.1.0</h2>
         <h3 class="added">Additions</h3>
         <ul>
-            <li></li>
+            <li>|line-height text|</li>
+            <ul>
+                <li>makes the line height different for text in the |</li>
+            </ul>
+            <li>\LINEHEIGHT:line-height\</li>
+            <ul>
+                <li>makes the line height for the whole page that</li>
+            </ul>
         </ul>
     </div>
     <br><hr>
