heading id fix, heading id # optional

--- a/Update.html
+++ b/Update.html
@@ -54,6 +54,14 @@
                 <li>makes the line height for the whole page that</li>
             </ul>
         </ul>
+        <h3 class="changes">Changes</h3>
+        <ul>
+            <li># is optional in heading id</li>
+        </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>Heading ids didn't close the heading tag</li>
+        </ul>
     </div>
     <br><hr>
     <div id="#1.0.1" class="version-container">
