--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./css/hidden-buttons.css">
 </head>
 <body ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
+    <div id="loading">Loading...</div>
     <div class="editing-bar" id="editing-bar" style="visibility: visible;" title="open/close this Ctrl + Shift + E">
         <button id="file-title" class="bar-section-title" title="file">
             🗎
