--- a/Update.html
+++ b/Update.html
@@ -53,6 +53,7 @@
             <ul>
                 <li>makes the line height for the whole page that</li>
             </ul>
+            <li>Added loading screen</li>
         </ul>
         <h3 class="changes">Changes</h3>
         <ul>
