--- a/Update.html
+++ b/Update.html
@@ -55,7 +55,7 @@
             </ul>
             <li>Added loading screen</li>
         </ul>
-        <h3 class="changes">Changes</h3>
+        <h3 class="changed">Changes</h3>
         <ul>
             <li># is optional in heading id</li>
         </ul>
