t[v]text to t[v]text|

--- a/Update.html
+++ b/Update.html
@@ -41,7 +41,15 @@
 <body>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
-    <div id="#1.1.0" class="version-container">
+    <div id="1.1.1" class="version-container">
+        <h2 class="version-num">1.1.0</h2>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>f[font], #[color], s[size] now don't use " instead end with |</li>
+        </ul>
+    </div>
+    <br><hr>
+    <div id="1.1.0" class="version-container">
         <h2 class="version-num">1.1.0</h2>
         <h3 class="added">Additions</h3>
         <ul>
@@ -65,7 +73,7 @@
         </ul>
     </div>
     <br><hr>
-    <div id="#1.0.1" class="version-container">
+    <div id="1.0.1" class="version-container">
         <h2 class="version-num">1.0.1</h2>
         <h3 class="changed">Changes</h3>
         <ul>
