--- a/Update.html
+++ b/Update.html
@@ -41,6 +41,14 @@
 <body>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.1.2">
+        <h2 class="version-num">1.1.2</h2>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>shortcuts for font, color, size work</li>
+        </ul>
+    </div>
+    <br><hr>
     <div id="1.1.1" class="version-container">
         <h2 class="version-num">1.1.0</h2>
         <h3 class="changed">Changes</h3>
