--- a/Update.html
+++ b/Update.html
@@ -41,6 +41,15 @@
 <body>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.1.3">
+        <h2 class="version-num">1.1.3</h2>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>''text'' can have multiple on the same line</li>
+        </ul>
+    </div>
+    <br>
+    <hr>
     <div class="version-container" id="1.1.2">
         <h2 class="version-num">1.1.2</h2>
         <h3 class="fixed">Fixes</h3>
@@ -50,7 +59,7 @@
     </div>
     <br><hr>
     <div id="1.1.1" class="version-container">
-        <h2 class="version-num">1.1.0</h2>
+        <h2 class="version-num">1.1.1</h2>
         <h3 class="changed">Changes</h3>
         <ul>
             <li>f[font], #[color], s[size] now don't use " instead end with |</li>
