line-height fix

--- a/Update.html
+++ b/Update.html
@@ -46,6 +46,7 @@
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>''text'' can have multiple on the same line</li>
+            <li>\SPACING:space\gives a div instead of style</li>
         </ul>
     </div>
     <br>
