--- a/Update.html
+++ b/Update.html
@@ -36,11 +36,39 @@
             text-decoration: underline;
             color:rgb(207, 207, 87);
         }
+        #toc a:visited{
+            color:blue;
+        }
     </style>
 </head>
 <body>
+    <div id="toc" style="position: fixed;overflow-y:auto;border:1px solid black;display: inline-block;height:90vh;padding:0;margin:0;padding-right:10px">
+    <h3><u>Versions</u></h3>
+    <ul>
+        <li><a href="#1.0.0">1.0.0</a></li>
+        <ul>
+            <li><a href="#1.1.0">1.1.0</a></li>
+            <ul>
+                <li><a href="#1.1.1">1.1.1</a></li>
+                <li><a href="#1.1.2">1.1.2</a></li>
+                <li><a href="#1.1.3">1.1.3</a></li>
+                <li><a href="#1.1.4">1.1.4</a></li>
+            </ul>
+        </ul>
+    </ul>
+    </div>
+    <div id="main">
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.1.4">
+        <h2 class="version-num">1.1.4</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>Table of Contents on update log</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.1.3">
         <h2 class="version-num">1.1.3</h2>
         <h3 class="fixed">Fixes</h3>
@@ -139,5 +167,9 @@
             <li>Unicode copy works on chrome</li>
         </ul>
     </div>
+    </div>  
 </body>
+<script>
+    document.getElementById("main").style.marginLeft = `${document.getElementById("toc").clientWidth}px`
+</script>
 </html>
