update log styling

--- a/Update.html
+++ b/Update.html
@@ -39,10 +39,13 @@
         #toc a:visited{
             color:blue;
         }
+        #toc a:hover{
+            color:green;
+        }
     </style>
 </head>
-<body>
-    <div id="toc" style="position: fixed;overflow-y:auto;border:1px solid black;display: inline-block;height:90vh;padding:0;margin:0;padding-right:10px">
+<body style='background-color:#eeeeee'>
+    <div id="toc" style="position: fixed;overflow-y:auto;border:2px solid black;display: inline-block;height:99vh;padding:0;margin:0;padding-right:10px;top:1px;left:1px;background-color:linen;">
     <h3><u>Versions</u></h3>
     <ul>
         <li><a href="#1.0.0">1.0.0</a></li>
@@ -65,6 +68,7 @@
         <h3 class="added">Additions</h3>
         <ul>
             <li>Table of Contents on update log</li>
+            <li>Update Log styling</li>
         </ul>
     </div>
     <hr>
