--- a/Update.html
+++ b/Update.html
@@ -55,20 +55,24 @@
                 <li><a href="#1.1.1">1.1.1</a></li>
                 <li><a href="#1.1.2">1.1.2</a></li>
                 <li><a href="#1.1.3">1.1.3</a></li>
-                <li><a href="#1.1.4">1.1.4</a></li>
             </ul>
+            <li><a href="#1.2.0">1.2.0</a></li>
         </ul>
     </ul>
     </div>
     <div id="main">
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
-    <div class="version-container" id="1.1.4">
-        <h2 class="version-num">1.1.4</h2>
+    <div class="version-container" id="1.2.0">
+        <h2 class="version-num">1.2.0</h2>
         <h3 class="added">Additions</h3>
         <ul>
             <li>Table of Contents on update log</li>
             <li>Update Log styling</li>
+            <li>Letter spacing syntax</li>
+            <ul>
+                <li>spacing&lt;->text</li>
+            </ul>
         </ul>
     </div>
     <hr>
