--- a/Update.html
+++ b/Update.html
@@ -74,6 +74,10 @@
                 <li>spacing&lt;->text</li>
             </ul>
         </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>readme can now be copy and pasted and it will work</li>
+        </ul>
     </div>
     <hr>
     <br>
