--- a/Update.html
+++ b/Update.html
@@ -73,6 +73,11 @@
             <ul>
                 <li>spacing&lt;->text</li>
             </ul>
+            <li>#[color] and {#color} now support #rgb</li>
+        </ul>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>color search regex is now [0-9a-fA-F] instead of [0-f]</li>
         </ul>
         <h3 class="fixed">Fixes</h3>
         <ul>
