update log favicon

--- a/Update.html
+++ b/Update.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="./imgs/fav.png">
     <title>Update Log</title>
     <style>
         html{
@@ -82,6 +83,7 @@
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>readme can now be copy and pasted and it will work</li>
+            <li>This page now has a favicon</li>
         </ul>
     </div>
     <hr>
