--- a/Update.html
+++ b/Update.html
@@ -84,6 +84,7 @@
         <ul>
             <li>readme can now be copy and pasted and it will work</li>
             <li>This page now has a favicon</li>
+            <li>Hovering over the ribbon doesn't constantly say ctrl + shift + e</li>
         </ul>
     </div>
     <hr>
