--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
     <div id="loading">Loading...</div>
-    <div class="editing-bar" id="editing-bar" style="visibility: visible;" title="open/close this Ctrl + Shift + E">
+    <div class="editing-bar" id="editing-bar" style="visibility: visible;">
         <button id="file-title" class="bar-section-title" title="file">
             🗎
         </button>
