--- a/Update.html
+++ b/Update.html
@@ -64,6 +64,18 @@
     <div id="main">
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.3.0">
+        <h2 class="version-num">1.3.0</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>\EMOJI :name: value\</li>
+            <ul>
+                <li>creates a custom emoji</li>
+            </ul>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.2.0">
         <h2 class="version-num">1.2.0</h2>
         <h3 class="added">Additions</h3>
