--- a/Update.html
+++ b/Update.html
@@ -58,6 +58,7 @@
                 <li><a href="#1.1.3">1.1.3</a></li>
             </ul>
             <li><a href="#1.2.0">1.2.0</a></li>
+            <li><a href="#1.3.0">1.3.0</a></li>
         </ul>
     </ul>
     </div>
@@ -72,6 +73,10 @@
             <ul>
                 <li>creates a custom emoji</li>
             </ul>
+        </ul>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>c-upsidedown now just rotates text</li>
         </ul>
     </div>
     <hr>
