c-rotate, update reame

--- a/Update.html
+++ b/Update.html
@@ -73,6 +73,7 @@
             <ul>
                 <li>creates a custom emoji</li>
             </ul>
+            <li>c-rotate, rotates text</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
