dom elems in dropdown, [angle]*text*

--- a/Update.html
+++ b/Update.html
@@ -74,10 +74,18 @@
                 <li>creates a custom emoji</li>
             </ul>
             <li>c-rotate, rotates text</li>
+            <li>[angle]*text*</li>
+            <ul>
+                <li>text will be skewed by angle</li>
+            </ul>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
             <li>c-upsidedown now just rotates text</li>
+        </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>All custom dom elements are in the dropdown</li>
         </ul>
     </div>
     <hr>
