--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             <wbr>
             <span class="divider" style="border-style:dashed;"></span>
             <label>Custom Elements</label>
-            <select name="custom elemnets" id="c-elements" oninput="startEndTypeInTextArea(`<${this.value}>`, `</${this.value}>`)">
+            <select name="custom elemnets" id="c-elements" oninput="startEndTypeInTextArea(`<${this.value}>`, `</${this.value.split(' ')[0]}>`)">
                 <option value="c-3d" title="(ctrl + shift + 1)">3d</option>
                 <option value="c-rainbow" title="(ctrl + shift + 2)">rainbow</option>
                 <option value="c-upsidedown" title="(ctrl + shift + 3)">upsidedown</option>
@@ -361,6 +361,13 @@
                 <option value="c-choose items='item1|item2'" title="put $1 or {value} where you want the choice to go, (ctrl + shift + 6)">choose</span></option>
                 <option value="c-random min=0 max=100 round=0'" title="put $1 or {value} where you want the number to go, (ctrl + shift + 7)">random</span></option>
                 <option value="c-spacer" title="(ctrl + shift + 8)">spacer</option>
+                <option value='c-variables x="2"'>variables</option>
+                <option value="c-time">time</option>
+                <option value='c-shadow  left=".2em" down=".2em" blur="2px" color="lightgrey"'>shadow</option>
+                <option value="c-alert alert=''">alert</option>
+                <option value="c-confirm prompt=''">confirm</option>
+                <option value="c-prompt prompt=''">prompt</option>
+                <option value="c-rotate rotate='20deg'">rotate</option>
             </select>
             </fieldset>
         </div>
