m-->display:inline-block, m->

--- a/Update.html
+++ b/Update.html
@@ -78,10 +78,13 @@
             <ul>
                 <li>text will be skewed by angle</li>
             </ul>
+            <li>indent->text the first line of text is indented by indent</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
             <li>c-upsidedown now just rotates text</li>
+            <li>font size is based on browser settings</li>
+            <li>margin-->text are now display:inline-block instead of display:block</li>
         </ul>
         <h3 class="fixed">Fixes</h3>
         <ul>
