--- a/Update.html
+++ b/Update.html
@@ -85,6 +85,7 @@
             <li>c-upsidedown now just rotates text</li>
             <li>font size is based on browser settings</li>
             <li>margin-->text are now display:inline-block instead of display:block</li>
+            <li>.[class]"text" is now .[class]text|</li>
         </ul>
         <h3 class="fixed">Fixes</h3>
         <ul>
