defer, removed loading

--- a/Update.html
+++ b/Update.html
@@ -91,6 +91,10 @@
         <ul>
             <li>All custom dom elements are in the dropdown</li>
         </ul>
+        <h3 class="removed">Removed</h3>
+        <ul>
+            <li>Loading</li>
+        </ul>
     </div>
     <hr>
     <br>
