--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="./css/hidden-buttons.css">
 </head>
 <body ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
-    <div id="loading">Loading...</div>
     <div class="editing-bar" id="editing-bar" style="visibility: visible;">
         <button id="file-title" class="bar-section-title" title="file">
             🗎
@@ -377,14 +376,14 @@
         <div class="preview" style="resize: horizontal;overflow: auto;width:50%" id="preview"></div>
     </div>
     <input type="color" id="context-menu-color-picker" class="context-menu-item" style="display:none;z-index:2" oninput="addTextTypeInTextArea(contextMenuColorpicker.value.split('#')[1], 'select')">
-    <script src="https://cdn.jsdelivr.net/npm/mathjs@7.5.1/dist/math.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="./js/emojis.js"></script>
-    <script src="./js/ConvertToMarkdown.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/DOMElements.js"></script>
-    <script src="./js/utility.js"></script>
-    <script src="./js/html2pdf.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjs@7.5.1/dist/math.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
+    <script src="./js/emojis.js" defer></script>
+    <script src="./js/ConvertToMarkdown.js" defer></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/DOMElements.js" defer></script>
+    <script src="./js/utility.js" defer></script>
+    <script src="./js/html2pdf.js" defer></script>
     <script>
         let TextEditorColorInversion = document.getElementById("text-editor-color-inversion").checked;
         let PreviewColorInversion = document.getElementById("preview-color-inversion").checked;
