c-textbox + c-textbox shortcut

--- a/Update.html
+++ b/Update.html
@@ -79,6 +79,8 @@
                 <li>text will be skewed by angle</li>
             </ul>
             <li>indent->text the first line of text is indented by indent</li>
+            <li>&lt;c-textbox> element</li>
+            <li>[w:h][(style)]text| as shortcut for c-textbox</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
