--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
                 <option value="c-confirm prompt=''">confirm</option>
                 <option value="c-prompt prompt=''">prompt</option>
                 <option value="c-rotate rotate='20deg'">rotate</option>
+                <option value="c-textbox width='100px' height='100px'">textbox</option>
             </select>
             </fieldset>
         </div>
