print button, file name, readme

--- a/Update.html
+++ b/Update.html
@@ -81,6 +81,7 @@
             <li>indent->text the first line of text is indented by indent</li>
             <li>&lt;c-textbox> element</li>
             <li>[w:h][(style)]text| as shortcut for c-textbox</li>
+            <li>Now a way to name the file</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
@@ -88,10 +89,12 @@
             <li>font size is based on browser settings</li>
             <li>margin-->text are now display:inline-block instead of display:block</li>
             <li>.[class]"text" is now .[class]text|</li>
+            <li>default name for plain + converted files is name of the file</li>
         </ul>
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>All custom dom elements are in the dropdown</li>
+            <li>print button</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
