cursor, saving, links

--- a/Update.html
+++ b/Update.html
@@ -59,12 +59,24 @@
             </ul>
             <li><a href="#1.2.0">1.2.0</a></li>
             <li><a href="#1.3.0">1.3.0</a></li>
+            <li><a href="#1.4.0">1.4.0</a></li>
         </ul>
     </ul>
     </div>
     <div id="main">
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container 3 0" id="1">
+        <h2 class="version-num">1.4.0</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>if the a tag doesn't get a title it defaults to the link</li>
+            <li>autosave, refreshing should'nt erase progress</li>
+            <li>{cursor:type:text} is now {cursor:type text} or {cursor:type:text}</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.3.0">
         <h2 class="version-num">1.3.0</h2>
         <h3 class="added">Additions</h3>
