--- a/Update.html
+++ b/Update.html
@@ -59,15 +59,17 @@
             </ul>
             <li><a href="#1.2.0">1.2.0</a></li>
             <li><a href="#1.3.0">1.3.0</a></li>
-            <li><a href="#1.4.0">1.4.0</a></li>
+            <ul>
+                <li><a href="#1.3.1">1.3.1</a></li>
+            </ul>
         </ul>
     </ul>
     </div>
     <div id="main">
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
-    <div class="version-container 3 0" id="1">
-        <h2 class="version-num">1.4.0</h2>
+    <div class="version-container" id="1.3.1">
+        <h2 class="version-num">1.3.1</h2>
         <h3 class="added">Additions</h3>
         <ul>
             <li>if the a tag doesn't get a title it defaults to the link</li>
