--- a/Update.html
+++ b/Update.html
@@ -61,6 +61,7 @@
             <li><a href="#1.3.0">1.3.0</a></li>
             <ul>
                 <li><a href="#1.3.1">1.3.1</a></li>
+                <li><a href="#1.3.2">1.3.2</a></li>
             </ul>
         </ul>
     </ul>
@@ -68,6 +69,15 @@
     <div id="main">
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.3.2">
+        <h2 class="version-num">1.3.2</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>Debug context menu</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.3.1">
         <h2 class="version-num">1.3.1</h2>
         <h3 class="added">Additions</h3>
