mathjax, mathjax checkbox, readme, onload convert, :div:, &stuff; shortcuts, duplicate

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <label class="option-item"><input type="checkbox" id="live-interprate" checked onclick="InterprateLive=!InterprateLive" title="(F2)">Convert Live?</label>
                 <span class="divider"></span>
                 <label class="option-item"><input title="(F4)" type="checkbox" id="custom" checked>Custom markdown?</label>
+                <span class="divider" dashed></span><label for="" class="option-item"><input type="checkbox" id="mathjax" checked="checked" title="Use Mathjax (F9)">Mathjax?</label>
                 <span class="divider"></span>
                 <label class="option-item"><input type="checkbox" id="syncscrolling" onclick="SyncScrolling = !SyncScrolling">Sync Scrolling?</label>                    <span class="divider"></span>
                 <label class="option-item" style="cursor:help" title="stuff like the background color puts the value in the editor on update"><input type="checkbox" id="previews" checked="checked" onclick="Preview=!Preview">Previews?</label>
@@ -380,7 +381,7 @@
         <div class="preview" style="resize: horizontal;overflow: auto;width:50%" id="preview"></div>
     </div>
     <div class="context-menu-container hidden" id="context-menu">
-        <h4 class="context-menu-header">Debug Menu</h4>
+        <h4 class="context-menu-header"><u>Debug Menu</u></h4>
         <div class="context-menu-item" onclick="findFirstMatchingRegex()">Log first regex match</div>
         <div class="context-menu-item" onclick="findMatchingRegexes()">Log regex matches</div>
     </div>
@@ -397,6 +398,49 @@
         let TextEditorColorInversion = document.getElementById("text-editor-color-inversion").checked;
         let PreviewColorInversion = document.getElementById("preview-color-inversion").checked;
     </script>
+    <script type="text/x-mathjax-config">
+  // TeX-AMS_HTML
+  MathJax.Hub.Config({
+    jax: [
+      'input/TeX',
+      'output/HTML-CSS',
+      'output/PreviewHTML',
+    ],
+    extensions: [
+      'tex2jax.js',
+      'AssistiveMML.js',
+      'a11y/accessibility-menu.js',
+    ],
+    TeX: {
+      extensions: [
+        'AMSmath.js',
+        'AMSsymbols.js',
+        'noErrors.js',
+        'noUndefined.js',
+      ]
+    },
+    tex2jax: {
+      inlineMath: [
+        ['$', '$'],
+        ['\\(', '\\)'],
+      ],
+      displayMath: [
+        ['$$', '$$'],
+        ['\\[', '\\]'],
+      ],
+      processEscapes: true
+    },
+    showMathMenu: false,
+    showProcessingMessages: false,
+    messageStyle: 'none',
+    skipStartupTypeset: true, // disable initial rendering
+    positionToHash: false
+  })
+  // set specific container to render, can be delayed too
+  MathJax.Hub.Queue(
+    ['Typeset', MathJax.Hub, 'preview']
+  )</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js"></script>
     
 </body>
 </html>
