--- a/Update.html
+++ b/Update.html
@@ -43,6 +43,12 @@
         #toc a:hover{
             color:green;
         }
+        #home-link{
+            color:blue;
+        }
+        #home-link:visited{
+            color:blue;
+        }
     </style>
 </head>
 <body style='background-color:#eeeeee'>
@@ -61,19 +67,43 @@
             <li><a href="#1.3.0">1.3.0</a></li>
             <ul>
                 <li><a href="#1.3.1">1.3.1</a></li>
-                <li><a href="#1.3.2">1.3.2</a></li>
+                <li><a href="#1.4.0">1.4.0</a></li>
             </ul>
         </ul>
     </ul>
     </div>
     <div id="main">
+    <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
-    <div class="version-container" id="1.3.2">
+    <div class="version-container" id="1.4.0">
         <h2 class="version-num">1.3.2</h2>
         <h3 class="added">Additions</h3>
         <ul>
             <li>Debug context menu</li>
+            <ul>
+                <li>Select text and alt + right click</li>
+                <li>First regex match, loggs the first regular expression match that matches the selected text</li>
+                <li>regex match, loggs every regular expression that matches the selected text</li>
+            </ul>
+            <li>Shortcut for &amp;shy;: text-<br>text</li>
+            <li>Shortcut for &asymp;: ~=</li>
+            <li>Shortcut for &divide;: ./.</li>
+            <li>Emote for &divide;: :div:</li>
+            <li>Shortcut for &ne;: /=</li>
+            <li>Shortcut for &le;: &lt;_</li>
+            <li>Shortcut for &ge;: _></li>
+            <li>Mathjax works</li>
+            <li>Setting to turn on and off Mathjax</li>
+            <li>[text]*number results in text being multiplied by number</li>
+        </ul>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>$$$ is now, solve: $$$</li>
+        </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>When the page is loaded the text is converted</li>
         </ul>
     </div>
     <hr>
