--- a/Update.html
+++ b/Update.html
@@ -105,6 +105,10 @@
         <ul>
             <li>When the page is loaded the text is converted</li>
         </ul>
+        <h3 class="removed">Removed</h3>
+        <ul>
+            <li>\THEME:theme\</li>
+        </ul>
     </div>
     <hr>
     <br>
