spin, multiply on string, $$->$$$

--- a/Update.html
+++ b/Update.html
@@ -96,10 +96,11 @@
             <li>Mathjax works</li>
             <li>Setting to turn on and off Mathjax</li>
             <li>[text]*number results in text being multiplied by number</li>
+            <li>INCLUDE:SPIN and &lt;spin>element</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
-            <li>$$$ is now, solve: $$$</li>
+            <li>$$2 + 2$$ is now, solve: $$$2 + 2$$$</li>
         </ul>
         <h3 class="fixed">Fixes</h3>
         <ul>
