--- a/Update.html
+++ b/Update.html
@@ -97,6 +97,7 @@
             <li>Setting to turn on and off Mathjax</li>
             <li>[text]*number results in text being multiplied by number</li>
             <li>INCLUDE:SPIN and &lt;spin>element</li>
+            <li>&lt;evaluate>javascript&lt;/evaluate></li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
