include regex is shorter, rainbow include

--- a/Update.html
+++ b/Update.html
@@ -97,6 +97,10 @@
             <li>[text]*number results in text being multiplied by number</li>
             <li>INCLUDE:SPIN and &lt;spin>element</li>
             <li>&lt;evaluate>javascript&lt;/evaluate></li>
+            <li>added INCLUDE:RAINBOW</li>
+            <ul>
+                <li>Not to be confused with &lt;c-rainbow></li>
+            </ul>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
